tests/macro/html-component-fail.stderr
error: this open tag has no corresponding close tag
  --> $DIR/html-component-fail.rs:54:13
   |
54 |     html! { <Child> };
   |             ^^^^^^^

error: expected identifier
  --> $DIR/html-component-fail.rs:55:22
   |
55 |     html! { <Child:: /> };
   |                      ^

error: unexpected end of input, expected identifier
  --> $DIR/html-component-fail.rs:56:5
   |
56 |     html! { <Child with /> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: unexpected token
  --> $DIR/html-component-fail.rs:57:20
   |
57 |     html! { <Child props /> };
   |                    ^^^^^

error: this open tag has no corresponding close tag
  --> $DIR/html-component-fail.rs:58:13
   |
58 |     html! { <Child with props > };
   |             ^^^^^^^^^^^^^^^^^^^

error: unexpected token
  --> $DIR/html-component-fail.rs:59:38
   |
59 |     html! { <Child with props ref=() ref=() /> };
   |                                      ^^^

error: unexpected token
  --> $DIR/html-component-fail.rs:60:27
   |
60 |     html! { <Child ref=() with props /> };
   |                           ^^^^

error: unexpected token
  --> $DIR/html-component-fail.rs:62:31
   |
62 |     html! { <Child with props () /> };
   |                               ^^

error: expected identifier
  --> $DIR/html-component-fail.rs:63:20
   |
63 |     html! { <Child type=0 /> };
   |                    ^^^^

error: expected identifier
  --> $DIR/html-component-fail.rs:64:20
   |
64 |     html! { <Child invalid-prop-name=0 /> };
   |                    ^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected expression
  --> $DIR/html-component-fail.rs:66:5
   |
66 |     html! { <Child string= /> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: too many refs set
  --> $DIR/html-component-fail.rs:71:33
   |
71 |     html! { <Child int=1 ref=() ref=() /> };
   |                                 ^^^

error: expected type, found `/`
  --> $DIR/html-component-fail.rs:74:14
   |
74 |     html! { </Child> };
   |              ^ expected type

error: this open tag has no corresponding close tag
  --> $DIR/html-component-fail.rs:75:13
   |
75 |     html! { <Child><Child></Child> };
   |             ^^^^^^^

error: only one root html element allowed
  --> $DIR/html-component-fail.rs:76:28
   |
76 |     html! { <Child></Child><Child></Child> };
   |                            ^^^^^^^^^^^^^^^

error[E0425]: cannot find value `blah` in this scope
  --> $DIR/html-component-fail.rs:61:25
   |
61 |     html! { <Child with blah /> };
   |                         ^^^^ not found in this scope

error[E0609]: no field `unknown` on type `ChildProperties`
  --> $DIR/html-component-fail.rs:65:20
   |
65 |     html! { <Child unknown="unknown" /> };
   |                    ^^^^^^^ unknown field
   |
   = note: available fields are: `string`, `int`

error[E0599]: no method named `unknown` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:65:20
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `unknown` not found for this
...
65 |     html! { <Child unknown="unknown" /> };
   |                    ^^^^^^^ method not found in `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:67:33
   |
67 |     html! { <Child int=1 string={} /> };
   |                                 ^^ expected struct `std::string::String`, found ()
   |
   = note: expected type `std::string::String`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:68:33
   |
68 |     html! { <Child int=1 string=3 /> };
   |                                 ^
   |                                 |
   |                                 expected struct `std::string::String`, found integer
   |                                 help: try using a conversion method: `3.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:69:33
   |
69 |     html! { <Child int=1 string={3} /> };
   |                                 ^^^
   |                                 |
   |                                 expected struct `std::string::String`, found integer
   |                                 help: try using a conversion method: `{3}.to_string()`
   |
   = note: expected type `std::string::String`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:70:30
   |
70 |     html! { <Child int=1 ref=() /> };
   |                              ^^ expected struct `yew::html::NodeRef`, found ()
   |
   = note: expected type `yew::html::NodeRef`
              found type `()`

error[E0308]: mismatched types
  --> $DIR/html-component-fail.rs:72:24
   |
72 |     html! { <Child int=0u32 /> };
   |                        ^^^^ expected i32, found u32
help: you can convert an `u32` to `i32` and panic if the converted value wouldn't fit
   |
72 |     html! { <Child int=0u32.try_into().unwrap() /> };
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `string` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:73:20
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `string` not found for this
...
73 |     html! { <Child string="abc" /> };
   |                    ^^^^^^ method not found in `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>`

error[E0599]: no method named `children` found for type `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>` in the current scope
  --> $DIR/html-component-fail.rs:77:5
   |
5  | #[derive(Properties, PartialEq)]
   |                   - method `children` not found for this
...
77 |     html! { <Child>{ "Not allowed" }</Child> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method not found in `ChildPropertiesBuilder<ChildPropertiesBuilderStep_missing_required_prop_int>`
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::vcomp::VChild<Child>: std::convert::From<yew::virtual_dom::vnode::VNode>` is not satisfied
  --> $DIR/html-component-fail.rs:78:5
   |
78 |     html! { <ChildContainer>{ "Not allowed" }</ChildContainer> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<yew::virtual_dom::vnode::VNode>` is not implemented for `yew::virtual_dom::vcomp::VChild<Child>`
   |
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::vcomp::VChild<Child>>` for `yew::virtual_dom::vnode::VNode`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::vcomp::VChild<Child>: std::convert::From<yew::virtual_dom::vnode::VNode>` is not satisfied
  --> $DIR/html-component-fail.rs:79:5
   |
79 |     html! { <ChildContainer><></></ChildContainer> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<yew::virtual_dom::vnode::VNode>` is not implemented for `yew::virtual_dom::vcomp::VChild<Child>`
   |
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::vcomp::VChild<Child>>` for `yew::virtual_dom::vnode::VNode`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::vcomp::VChild<Child>: std::convert::From<yew::virtual_dom::vcomp::VChild<ChildContainer>>` is not satisfied
  --> $DIR/html-component-fail.rs:80:5
   |
80 |     html! { <ChildContainer><ChildContainer /></ChildContainer> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<yew::virtual_dom::vcomp::VChild<ChildContainer>>` is not implemented for `yew::virtual_dom::vcomp::VChild<Child>`
   |
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::vcomp::VChild<Child>>` for `yew::virtual_dom::vcomp::VChild<ChildContainer>`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::vcomp::VChild<Child>: std::convert::From<yew::virtual_dom::vcomp::VChild<ChildContainer>>` is not satisfied
  --> $DIR/html-component-fail.rs:81:5
   |
81 |     html! { <ChildContainer><ChildContainer /></ChildContainer> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<yew::virtual_dom::vcomp::VChild<ChildContainer>>` is not implemented for `yew::virtual_dom::vcomp::VChild<Child>`
   |
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::vcomp::VChild<Child>>` for `yew::virtual_dom::vcomp::VChild<ChildContainer>`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error[E0277]: the trait bound `yew::virtual_dom::vcomp::VChild<Child>: std::convert::From<yew::virtual_dom::vnode::VNode>` is not satisfied
  --> $DIR/html-component-fail.rs:82:5
   |
82 |     html! { <ChildContainer><Child int=1 /><other /></ChildContainer> };
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<yew::virtual_dom::vnode::VNode>` is not implemented for `yew::virtual_dom::vcomp::VChild<Child>`
   |
   = note: required because of the requirements on the impl of `std::convert::Into<yew::virtual_dom::vcomp::VChild<Child>>` for `yew::virtual_dom::vnode::VNode`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
